docs: change brand and car docs
